#
# Written by Patrick Guio <patrick.guio@fys.uio.no>
#

SUBDIRS = .

arraydir = $(includedir)/blitz/array

array_HEADERS = asexpr.h bops.cc cartesian.h cgsolve.h complex.cc \
convolve.cc convolve.h cycle.cc domain.h et.h eval.cc expr.h fastiter.h \
funcs.h functorExpr.h geometry.h indirect.h interlace.cc io.cc iter.h map.h \
methods.cc misc.cc multi.h newbops.cc newet-macros.h newet.h ops.cc ops.h \
reduce.cc reduce.h resize.cc shape.h slice.h slicing.cc stencil-et.h \
stencilops.h stencils.cc stencils.h storage.h uops.cc where.h zip.h

